fix(rules): Readable links in rules

--- a/src/styles/layouts/GttLayoutGames.css
+++ b/src/styles/layouts/GttLayoutGames.css
@@ -40,8 +40,7 @@
     margin: 0;
 }
 .ContentHolder a{
-    text-decoration: none;
-    color: blue;
+    color: #FF9E00;
 }
 
 #GttLayoutGames-sponsor-underline{
